# reqledger

./: .codecrate.toml  .gitignore  .ruff.toml  .taskledger.toml  README.md  pyproject.toml  setup.py
reqledger/: __init__.py  __main__.py  cli.py  config.py  errors.py  ids.py  launcher.py  manifest.py  model.py  parser.py  review.py  store.py
tests/: conftest.py  test_cli.py  test_config.py  test_ids.py  test_manifest.py  test_parser.py  test_review.py  test_store.py  test_validate.py
