[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["reqledger*"]

[tool.setuptools.package-data]
reqledger = [
    "py.typed",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[project]
name = "reqledger"
description = "Ledgerwerk record owner for requirements and acceptance criteria"
authors = [{name = "Ledgerwerk Contributors"}]
maintainers = [{name = "Holger Nahrstaedt"}]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = ["cli", "requirements", "acceptance-criteria", "traceability", "ledgerwerk", "specifications"]
dependencies = [
    "typer",
    "click",
    "ledgercore>=0.2.0",
    'tomli; python_version < "3.11"',
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

dynamic=["version"]

[project.scripts]
reqledger = "reqledger.launcher:main"

[project.urls]
Homepage = "https://github.com/ledgerwerk/reqledger"
Repository = "https://github.com/ledgerwerk/reqledger"
Issues = "https://github.com/ledgerwerk/reqledger/issues"
Changelog = "https://github.com/ledgerwerk/reqledger/releases"

[project.optional-dependencies]
dev = [
    "build",
    "mypy",
    "pytest",
    "pytest-xdist",
    "ruff",
    "twine",
    "types-PyYAML",
]
rich = [
    "rich",
]

[tool.setuptools_scm]
write_to = "reqledger/_version.py"

[tool.tox]
legacy_tox_ini = """

[testenv]
deps =
    pytest
commands =
    pytest -q -m 'not slow and not integration' {posargs}

[testenv:integration]
deps =
    pytest
    pytest-xdist
commands =
    pytest -q -m 'slow or integration' -n auto --dist=worksteal {posargs}

[testenv:full]
deps =
    pytest
    pytest-xdist
commands =
    pytest -q -n auto --dist=worksteal {posargs}
"""

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
]
